# Dz_mai_5

./: CMakeLists.txt
task_5/: CMakeLists.txt  task_5.cpp  task_5.h
